--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "gh-pages": "^4.0.0",
+    "i": "^0.3.7",
+    "jszip": "^3.10.1",
+    "npm": "^9.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
