--- a/package.json
+++ b/package.json
@@ -25,5 +25,6 @@
     "@vitejs/plugin-react-swc": "^3.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
-  }
+  },
+  "homepage": "https://HectorRC920.github.io/ExtractionSatMetadataFront/"
 }
